--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>About: Franklin!</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="cache-control" content="no-cache"/>
-        <meta http-equiv="pragma" content="no-cache"/>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-        <meta name="viewport"
-              content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
-    </head>
-    <body>
-           <p>coming soon!</p> 
-    </body>
+
+<head>
+  <title>About: Franklin!</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta name="viewport"
+    content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+</head>
+
+<body>
+  <main>
+    <div class="name">
+      Franklin
+    </div>
+    <div class="page">
+      <section>
+        <span>1</span>
+      </section>
+      <section>
+        <span>2</span>
+      </section>
+      <section>
+        <span>3</span>
+      </section>
+      <section>
+        <span>4</span>
+      </section>
+      <section>
+        <span>5</span>
+      </section>
+      <section>
+        <span>6</span>
+      </section>
+    </div>
+  </main>
+</body>
+
 </html>
